[project]
name = "sverige-id"
version = "0.1.0"
description = "Mock backend for a platform Electronic Identification (eID) system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "qrcode>=8.2",
    "pillow>=12.2.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 128
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
